--- a/app/src/main/res/layout/my_management_noaccount.xml
+++ b/app/src/main/res/layout/my_management_noaccount.xml
@@ -93,6 +93,7 @@
         <androidx.cardview.widget.CardView
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/cardViewWithLogButton"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
