--- a/app/src/main/res/layout/voice_translation.xml
+++ b/app/src/main/res/layout/voice_translation.xml
@@ -122,6 +122,28 @@
                 android:textSize="18sp"
                 android:background="@drawable/translation_result_background" />
 
+            <ImageButton
+                android:id="@+id/btn_play_voice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="20dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:layout_gravity="center_horizontal"
+                android:padding="16dp"
+                android:src="@drawable/ic_play_voice" />
+
+            <!-- 语音输入提示文本 -->
+            <TextView
+                android:id="@+id/voice_output_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:text="播放翻译结果语音"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
