--- a/app/src/main/res/layout/download_translate.xml
+++ b/app/src/main/res/layout/download_translate.xml
@@ -56,25 +56,28 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- 翻译结果展示 -->
+
+    <!-- 翻译按钮 -->
     <ScrollView
         android:id="@+id/scrollView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="369dp"
+        android:layout_height="290dp"
         android:layout_marginTop="16dp"
         android:fillViewport="true"
+        app:layout_constraintBottom_toTopOf="@id/btn_translate"
         app:layout_constraintTop_toBottomOf="@id/til_input"
-        app:layout_constraintBottom_toTopOf="@id/btn_translate">
+        app:layout_constraintVertical_bias="0.018"
+        tools:layout_editor_absoluteX="4dp">
 
         <TextView
             android:id="@+id/txt_translation_result"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:textSize="18sp"
             android:background="@drawable/custom_edittext_border"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:textSize="18sp" />
     </ScrollView>
 
-    <!-- 翻译按钮 -->
     <Button
         android:id="@+id/btn_translate"
         android:layout_width="match_parent"
