--- a/app/src/main/res/layout/download_translate.xml
+++ b/app/src/main/res/layout/download_translate.xml
@@ -56,38 +56,57 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- 翻译结果展示 -->
-
     <!-- 翻译按钮 -->
+
     <ScrollView
         android:id="@+id/scrollView"
-        android:layout_width="369dp"
-        android:layout_height="290dp"
-        android:layout_marginTop="16dp"
-        android:fillViewport="true"
-        app:layout_constraintBottom_toTopOf="@id/btn_translate"
-        app:layout_constraintTop_toBottomOf="@id/til_input"
-        app:layout_constraintVertical_bias="0.018"
-        tools:layout_editor_absoluteX="4dp">
+        android:layout_width="0dp"
+    android:layout_height="186dp"
+    android:layout_marginTop="16dp"
+    android:fillViewport="true"
+    app:layout_constraintWidth_default="spread"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/til_input"
+    app:layout_constraintBottom_toTopOf="@id/btn_translate"
+    app:layout_constraintVertical_bias="0.028"
+    tools:layout_editor_absoluteX="4dp">
 
-        <TextView
-            android:id="@+id/txt_translation_result"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:background="@drawable/custom_edittext_border"
-            android:padding="10dp"
-            android:textSize="18sp" />
-    </ScrollView>
+    <TextView
+        android:id="@+id/txt_translation_result"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@drawable/custom_edittext_border"
+        android:padding="10dp"
+        android:textSize="18sp" />
+</ScrollView>
 
+    <!-- 退出按钮 -->
     <Button
         android:id="@+id/btn_translate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="16dp"
+        android:layout_marginVertical="100dp"
+        android:layout_marginBottom="96dp"
         android:background="@drawable/button_background"
+        android:padding="16dp"
         android:text="翻译"
-        android:padding="10dp"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="20dp" />
+
+    <Button
+        android:id="@+id/btn_exit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/button_background"
+        android:padding="10dp"
+        android:text="退出"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="16dp" />
 
     <!-- 其他视图和约束 -->
 
