--- a/app/src/main/res/layout/my_management_account.xml
+++ b/app/src/main/res/layout/my_management_account.xml
@@ -92,11 +92,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="466dp"
         android:gravity="center_horizontal"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <!-- 编辑资料按钮 -->
         <androidx.cardview.widget.CardView
@@ -111,11 +111,11 @@
                 android:id="@+id/edit_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="编辑资料"
                 android:drawableLeft="@drawable/ic_edit"
                 android:drawableRight="@drawable/ic_to"
+                android:drawablePadding="18dp"
 
-                android:drawablePadding="16dp" />
+                android:text="编辑资料" />
 
         </androidx.cardview.widget.CardView>
 
@@ -132,10 +132,10 @@
                 android:id="@+id/offline_translation_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="离线翻译"
                 android:drawableLeft="@drawable/ic_download"
                 android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp" />
+                android:drawablePadding="16dp"
+                android:text="离线翻译" />
 
         </androidx.cardview.widget.CardView>
 
@@ -152,10 +152,10 @@
                 android:id="@+id/privacy_settings_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="账户设置"
                 android:drawableLeft="@drawable/ic_personalset"
                 android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp" />
+                android:drawablePadding="16dp"
+                android:text="账户设置" />
 
         </androidx.cardview.widget.CardView>
 
@@ -172,10 +172,10 @@
                 android:id="@+id/select_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="选择语言"
                 android:drawableLeft="@drawable/ic_select"
                 android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp" />
+                android:drawablePadding="16dp"
+                android:text="选择语言" />
 
         </androidx.cardview.widget.CardView>
 
@@ -192,10 +192,10 @@
                 android:id="@+id/feedback_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="投诉建议"
                 android:drawableLeft="@drawable/ic_feedback"
                 android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp" />
+                android:drawablePadding="16dp"
+                android:text="投诉建议" />
 
         </androidx.cardview.widget.CardView>
 
@@ -210,12 +210,12 @@
 
             <Button
                 android:id="@+id/logout_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="退出账号"
+                android:layout_width="196dp"
+                android:layout_height="56dp"
                 android:drawableLeft="@drawable/ic_exit"
                 android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp" />
+                android:drawablePadding="16dp"
+                android:text="退出账号" />
 
         </androidx.cardview.widget.CardView>
 
@@ -223,137 +223,126 @@
         <!-- 底部导航栏 -->
 
         <LinearLayout
+            android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
+            android:layout_height="71dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="0dp"
-            android:layout_marginBottom="-8dp"
-            android:background="#ededed"
+            android:background="#EDEDED"
             android:orientation="horizontal"
             android:paddingVertical="8dp">
 
-            <!-- 其他底部按钮可以在这里添加，与主页布局类似 -->
+            <!-- 首页按钮 -->
             <LinearLayout
-                android:id="@+id/bottom_navigation"
-                android:layout_width="match_parent"
+                android:id="@+id/home_button"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:background="#ededed"
-                android:orientation="horizontal"
-                android:paddingVertical="8dp">
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
-                <!-- 首页按钮 -->
-                <LinearLayout
-                    android:id="@+id/home_button"
-                    android:layout_width="0dp"
+                <ImageView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
+                    android:src="@drawable/ic_home_blue_24dp" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_home_black_24dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="首页"
-                        android:textColor="#000000"
-                        android:textSize="12sp" />
-                </LinearLayout>
-
-                <!-- 语音按钮 -->
-                <LinearLayout
-                    android:id="@+id/voice_button"
-                    android:layout_width="0dp"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
+                    android:text="首页"
+                    android:textColor="#0044cc"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_mic_black_24dp" />
+            <!-- 语音按钮 -->
+            <LinearLayout
+                android:id="@+id/voice_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="语音"
-                        android:textColor="#000000"
-                        android:textSize="12sp" />
-                </LinearLayout>
-
-                <!-- 拍照按钮 -->
-                <LinearLayout
-                    android:id="@+id/camera_button"
-                    android:layout_width="0dp"
+                <ImageView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
+                    android:src="@drawable/ic_mic_black_24dp" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_camera_alt_black_24dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="拍照"
-                        android:textColor="#000000"
-                        android:textSize="12sp" />
-                </LinearLayout>
-
-                <!-- 历史按钮 -->
-                <LinearLayout
-                    android:id="@+id/history_button"
-                    android:layout_width="0dp"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
+                    android:text="语音"
+                    android:textColor="#000000"
+                    android:textSize="12sp" />
+            </LinearLayout>
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_history_black_24dp" />
+            <!-- 拍照按钮 -->
+            <LinearLayout
+                android:id="@+id/camera_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="历史"
-                        android:textColor="#000000"
-                        android:textSize="12sp" />
-                </LinearLayout>
-
-                <!-- 我的按钮 -->
-                <LinearLayout
-                    android:id="@+id/my_button"
-                    android:layout_width="0dp"
+                <ImageView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
+                    android:src="@drawable/ic_camera_alt_black_24dp" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_person_blue_24dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="拍照"
+                    android:textColor="#000000"
+                    android:textSize="12sp" />
+            </LinearLayout>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="我的"
-                        android:textColor="#0044cc"
-                        android:textSize="12sp" />
-                </LinearLayout>
+            <!-- 历史按钮 -->
+            <LinearLayout
+                android:id="@+id/history_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_history_black_24dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="历史"
+                    android:textColor="#000000"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <!-- 我的按钮 -->
+            <LinearLayout
+                android:id="@+id/my_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_person_black_24dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="我的"
+                    android:textColor="#000000"
+                    android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+    </LinearLayout>
+
 
