--- a/app/src/main/res/layout/my_management_noaccount.xml
+++ b/app/src/main/res/layout/my_management_noaccount.xml
@@ -79,57 +79,40 @@
         </LinearLayout>
 
     <!-- 中间区域按钮 -->
+    <!-- 中间区域按钮 -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="98dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/log_button"
-            style="?attr/borderlessButtonStyle"
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:background="@drawable/button_background"
-            android:drawablePadding="30dp"
-            android:stateListAnimator="@animator/button_elevation"
-            android:text="点击登录"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+    <Button
+        android:id="@+id/log_button"
+        style="?attr/borderlessButtonStyle"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:background="@drawable/button_background"
+        android:drawablePadding="30dp"
+        android:stateListAnimator="@animator/button_elevation"
+        android:text="点击登录"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardViewWithLogButton"
-            android:layout_width="301dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:clickable="true"
-            android:focusable="true"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="4dp"
-            app:cardMaxElevation="4dp">
+    <!-- CardView部分已被删除 -->
 
-        </androidx.cardview.widget.CardView>
+</LinearLayout>
 
-    </LinearLayout>
-
-    <View
-        android:id="@+id/bottom_spacer"
-        android:layout_width="0dp"
-        android:layout_height="270dp"
-        app:layout_constraintTop_toBottomOf="@+id/bottom_navigation"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation" />
+    <!-- bottom_spacer部分已被删除或保留，根据需要进行调整 -->
 
     <LinearLayout
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="320dp"
         android:background="#ededed"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
